http://bugzilla.gnome.org/show_bug.cgi?id=77203 be more anal about server

2002-04-01  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=77203
	* gnome-settings-accessibility-keyboard.c (set_gconf_from_server) : be
	  more anal about server failure.
	(set_server_from_gconf) : ditto.

2002-03-30  Jody Goldberg <jody@gnome.org>

	* gnome-settings-xsettings.c (translations) : reorder to match gdk.
	  This simplifies maintenance.